<resources>
    <string name="app_name">AuthorisationFirebase</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="click_to_register">click to register</string>
    <string name="create_new_account">Create New Account</string>
    <string name="authenticator_app">Authenticator App</string>
    <string name="password1">Password</string>
    <string name="phone">Phone</string>
    <string name="password2">password1</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="register1">Register</string>
    <string name="email1">Email</string>
    <string name="full_name1">Full Name</string>
    <string name="choose_your_preferences">Choose your preferences</string>
    <string name="save">SAVE</string>
    <string name="continue_btn">Continue</string>
    <string name="cont_btn">Continue</string>

    <string-array name="optionalParameters2">
        <item>null</item>>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string name="title_activity_maps">Map</string>
    <string name="restaurant">Restaurant</string>
    <string name="bar1">Bar</string>
    <string name="atm">ATM</string>
    <string name="generate_routes">Generate routes</string>
    <string name="ga">GA</string>
    <string name="geneticAlgorithm">GA</string>
    <string name="here">here</string>
    <string name="title_activity_gamaps">Map</string>
    <string name="title_activity_maps_g">Map</string>

</resources>
